--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -6,11 +6,9 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <div>
-                        <img src="{{ url_for('static', filename='img/logo.jpg') }}" class="img-fluid" alt="MCLab">
+                    <div class="text-center">
+                        <img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" alt="parking" height="70%" width="70%">
                     </div>
-                    <br>
-                    <h2 class="text-center">Inventory Management Systems</h2><br>
                     <hr>
                 </div>
             </div>
@@ -24,7 +22,7 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <div class="row">
+            <div class="row" style="margin-top: 10%">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="form-group has-danger">
@@ -57,11 +55,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="padding-top: 1rem">
+            <div class="row" style="padding-top: 1rem" align="center">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary"><i class="fa fa-sign-in"></i> Login</button>
-                    <a href="{{ url_for('auth.register') }}" class="btn btn-primary"><i class="fa fa-user-plus"></i>
+                    <button type="submit" class="btn btn-primary" style="background-color: #4D4D4F"><i class="fa fa-sign-in"></i> Login</button>
+                    <a href="{{ url_for('auth.register') }}" class="btn btn-primary" style="background-color: #4D4D4F"><i class="fa fa-user-plus"></i>
                         Sign Up</a>
                 </div>
                 <div class="col-md-3">
