--- a/templates/login/not_allowed.html
+++ b/templates/login/not_allowed.html
@@ -1,14 +1,25 @@
 {% extends 'base_login.html' %}
 {% block login %}
+
+
+        <div class="row" style="background-color: #4D4D4F; text-align: center">
+
+        <div class="col-lg-12">
+            <h2 style="color: #FFFFFF"></h2>
+            <h2 style="color: #FFFFFF">Registrazione</h2>
+            <h2 style="color: #FFFFFF"></h2>
+
+        </div>
+    </div>
+
+
 <div class="my-5">
         <div class="row">
             <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-6" style="text-align: center">
                 <div>
-                    <img src="{{ url_for('static', filename='img/logo.jpg') }}" class="img-fluid" alt="MCLab">
-                </div>
-                <br>
-                <h2 class="text-center">Inventory Management Systems</h2><br>
+                        <img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" alt="parking"
+                             height="50%" width="50%">                </div>
                 <hr>
             </div>
         </div>
@@ -16,7 +27,19 @@
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <br>
-                <h2 class="text-center">Il tuo profilo è in attesa di convalida. <br>Contattare l'amministratore per accelerare i tempi di attivazione.</h2><br>
+                <h4 class="text-left">Per completare la tua registrazione,
+                ti chiediamo di inviare
+                una copia del tuo
+                documento d'identità
+                all'indirizzo:
+                    <br><br>
+
+                <b>smartparking@gmail.com</b>
+                <br><br>
+
+                Sarai contattato e informato
+                riguardo la tua effettiva
+                registrazione al più presto. </h4>
                 <hr>
             </div>
             <div class="col-md-2"></div>
