--- a/templates/common/mail.html
+++ b/templates/common/mail.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div>
-    <h2>MCLab Inventory Management System</h2>
+    <h2>Smart Parking</h2>
     <h4>Recupero password</h4>
     <p>Nome: {{ data['name'] }}</p>
     <p>Cognome: {{ data['cognome'] }}</p>
