--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,106 @@
 </head>
 
 <body>
- <h1>{% if is_admin %} Prima pagine amministratore! {% else %} Prima pagina utente! {% endif %}</h1>
-<a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a>
+
+<div class="my-5">
+    <form method="POST"
+
+          {% if is_admin %}
+            action="{{ url_for("admin.index") }}"
+          {% else %}
+            action="{{ url_for("main.index") }}"
+          {% endif %}
+            >
+
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="text-center">
+                    <img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" alt="parking"
+                         height="70%"
+                         width="70%">
+                </div>
+                <hr>
+            </div>
+        </div>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div style="text-align: center">
+                        <p style="color: #ff6f00">{{ message }}</p>
+                    </div>
+                    <br>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
+
+        <div class="row">
+            <div class="col-12" style="margin-bottom: 5%; text-align: center">
+                <a class="text-primary" style="font-size: x-large"><b>Ciao {{ username }}!</b></a>
+            </div>
+        </div>
+
+
+        <div class="row" style="margin-top: 5%; margin-bottom: 3%">
+            <div class="col-3"></div>
+            <div class="col-6 text-center">
+                <button type="submit" class="btn btn-primary btn-block" name="command" value="PARKING"
+                        style="background-color: #4D4D4F; border-color: #4D4D4F">
+                    {% if is_admin %}
+                        <b style="font-size: large">Gestisci</b>
+                    {% else %}
+                        <b style="font-size: large">Prenota</b>
+                    {%  endif %}
+                </button>
+            </div>
+        </div>
+
+        {% if not is_admin %}
+
+            <div class="row" style="margin-top: 3%; margin-bottom: 3%">
+                <div class="col-3"></div>
+                <div class="col-6 text-center">
+                    <button type="submit" class="btn btn-primary btn-block" name="command" value="PAGA"
+                            style="background-color: #4D4D4F; border-color: #4D4D4F
+                            "><b style="font-size: large">Paga</b>
+                    </button>
+                </div>
+            </div>
+
+        {% endif %}
+
+        <div class="row" style="margin-top: 3%; margin-bottom: 3%">
+            <div class="col-3"></div>
+            <div class="col-6 text-center">
+                <button type="submit" class="btn btn-primary btn-block" name="command" value="PROFILO"
+                        style="background-color: #4D4D4F; border-color: #4D4D4F;
+                            "><b style="font-size: large">Il Mio Profilo</b>
+                </button>
+            </div>
+        </div>
+
+        {% if is_admin %}
+
+            <div class="row" style="margin-top: 3%; margin-bottom: 3%">
+                <div class="col-3"></div>
+                <div class="col-6 text-center">
+                    <button type="submit" class="btn btn-primary btn-block" name="command" value="TARIFFE"
+                            style="background-color: #4D4D4F; border-color: #4D4D4F
+                            "><b style="font-size: large">Tariffe</b>
+                    </button>
+                </div>
+            </div>
+
+        {% endif %}
+
+        <div class="row" style="margin-top: 5%">
+            <div class="col-9" style="text-align: right">
+                <a class="text-success" href="{{ url_for('auth.logout') }}" style="font-size: large"><u>Logout</u></a>
+            </div>
+        </div>
+    </form>
+</div>
 </body>
 </html>
