--- a/templates/login/pwd_recovery.html
+++ b/templates/login/pwd_recovery.html
@@ -1,5 +1,27 @@
-{% extends 'base_login.html' %}
-{% block login %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <title>Smart Parking</title>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap core -->
+    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='scripts/jquery-3.3.1.js') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='scripts/popper.js') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='scripts/bootstrap.js') }}" rel="stylesheet">
+
+</head>
+
+<body>
+<div class="container">
     <div class="my-5">
 
         <form class="form-horizontal" role="form" method="POST" action="{{ url_for("auth.pwd_recovery") }}">
@@ -7,11 +29,11 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <div>
-                        <img src="{{ url_for('static', filename='img/logo.jpg') }}" class="img-fluid" alt="MCLab">
+                    <div class="text-center">
+                        <img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" alt="parking"
+                             height="70%"
+                             width="70%">
                     </div>
-                    <br>
-                    <h2 class="text-center">Inventory Management Systems</h2><br>
                     <hr>
                 </div>
             </div>
@@ -25,7 +47,7 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <div class="row">
+            <div class="row" style="padding-top: 1rem">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="form-group has-danger">
@@ -39,14 +61,25 @@
                 <div class="col-md-3">
                 </div>
             </div>
-
-            <div class="row" style="padding-top: 1rem">
+            <div class="row" style="padding-top: 1rem" align="center">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary">Richiedi</button>
-                    <a class="btn btn-link" href="{{ url_for('auth.login') }}">back</a>
+                    <button type="submit" class="btn btn-primary" style="background-color: #4D4D4F"><i class="fa fa-sign-in"></i><b style="font-size: large"> Richiedi</b> </button>
                 </div>
             </div>
         </form>
+        <div class="row" style="margin-top: 3%; margin-bottom: 3%">
+
+        <div class="col-12 text-center">
+                <form method="GET" action="{{ url_for('auth.login') }}">
+                    <button type="submit" class="btn btn-primary"
+                            style="background-color: #4D4D4F
+                            "><b style="font-size: large">Back</b>
+                    </button>
+                </form>
+            </div>
+        </div>
     </div>
-{% endblock %}
+</div>
+</body>
+</html>
