--- a/templates/login/registration.html
+++ b/templates/login/registration.html
@@ -1,5 +1,27 @@
-{% extends 'base_login.html' %}
-{% block login %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <title>Smart Parking</title>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap core -->
+    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='scripts/jquery-3.3.1.js') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='scripts/popper.js') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='scripts/bootstrap.js') }}" rel="stylesheet">
+
+</head>
+
+<body>
+<div class="container">
 
     <div class="row" style="background-color: #4D4D4F; text-align: center">
 
@@ -14,16 +36,6 @@
     <div class="my-5">
         <form class="form-horizontal" role="form" method="POST" action="{{ url_for("auth.register") }}">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <div class="text-center"  style="margin-top: -5%">
-                        <img src="{{ url_for('static', filename='img/logo.png') }}" class="img-fluid" alt="parking"
-                             height="50%" width="50%">
-                    </div>
-                    <hr>
-                </div>
-            </div>
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     {% for message in messages %}
@@ -117,12 +129,48 @@
                 <div class="col-md-3">
                 </div>
             </div>
-            <div class="row" style="padding-top: 1rem">
+            <div class="row">
                 <div class="col-md-3"></div>
-                <div class="col-md-6" style="text-align: center">
-                    <button type="submit" class="btn btn-primary" style="background-color: #4D4D4F"><i class="fa fa-sign-in"></i> Conferma</button>
+                <div class="col-md-6">
+                    <div class="form-group has-danger">
+                        <label class="sr-only" for="email">Cognome</label>
+                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-car"></i></div>
+                            {{ form.targa(class="form-control", placeholder="Targa Principale", pattern=".{2,25}", title="Minimo 4 caratteri e massimo 10", required=True) }}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                </div>
+            </div>
+            <div class="row" style="padding-top: 1rem; margin-top: 3%">
+                <div class="col-2"></div>
+                <div class="col-8 text-center">
+                    <button type="submit" class="btn btn-primary" style="background-color: #4D4D4F; border-color: #4D4D4F;
+                            "><b style="font-size: large">Conferma</b>
+                    </button>
                 </div>
             </div>
         </form>
+        <div class="row" style="margin-top: 3%; margin-bottom: 3%">
+            <div class="col-2"></div>
+            <div class="col-8 text-center">
+                <form method="GET" action="{{ url_for('auth.login') }}">
+                    <button type="submit" class="btn btn-primary"
+                            style="background-color: #4D4D4F; border-color: #4D4D4F;
+                            "><b style="font-size: large">Back</b>
+                    </button>
+                </form>
+            </div>
+
+            <div class="row" style="margin-top: 5%">
+                <div class="col-9" style="text-align: right">
+                    <a class="text-success" href="{{ url_for('auth.tariffe') }}"
+                       style="font-size: large"><u>Tariffe</u></a>
+                </div>
+            </div>
+        </div>
     </div>
-{% endblock %}
+</div>
+</body>
+</html>
