--- a/templates/login/tariffe.html
+++ b/templates/login/tariffe.html
@@ -21,13 +21,13 @@
 </head>
 
 <body>
-    <div class="container">
+<div class="container">
 
     <div class="row" style="background-color: #4D4D4F; text-align: center">
 
         <div class="col-lg-12">
             <h2 style="color: #FFFFFF"></h2>
-            <h2 style="color: #FFFFFF">Registrazione</h2>
+            <h2 style="color: #FFFFFF">Tariffe</h2>
             <h2 style="color: #FFFFFF"></h2>
 
         </div>
@@ -44,31 +44,24 @@
                 <hr>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-8">
-                <br>
-                <h5 class="text-left" style="margin-top: -5%">Per completare la tua registrazione,
-                    ti chiediamo di inviare
-                    una copia del tuo
-                    documento d'identità
-                    all'indirizzo:
-                    <br><br>
 
-                    <b>smartparking@gmail.com</b>
-                    <br><br>
-
-                    Sarai contattato e informato
-                    riguardo la tua effettiva
-                    registrazione al più presto. </h5>
-                <hr>
+        {% for _ in range(1, len) %}
+            <div class="row">
+                <div class="col-12">
+                    <b class="text-left" style="margin-top: -5%">{{ nomi_tariffe[loop.index0] }}</b>
+                </div>
             </div>
-            <div class="col-md-2"></div>
-        </div>
+            <div class="row">
+                <div class="col-12">
+                    <b class="text-left">{{ descr_tariffe[loop.index0] }}</b>
+                </div>
+            </div>
+        {% endfor %}
 
         <div class="row" style="margin-top: 3%; margin-bottom: 3%">
             <div class="col-2"></div>
             <div class="col-8 text-center">
-                <form method="GET" action="{{ url_for('auth.login') }}">
+                <form method="GET" action="{{ url_for('auth.registration') }}">
                     <button type="submit" class="btn btn-primary"
                             style="background-color: #4D4D4F; border-color: #4D4D4F;
                             "><b style="font-size: large">Back</b>
@@ -78,6 +71,6 @@
         </div>
 
     </div>
-    </div>
+</div>
 </body>
 </html>
