--- a/templates/user/contattaci.html
+++ b/templates/user/contattaci.html
@@ -21,13 +21,13 @@
 </head>
 
 <body>
-<div class="container">
+    <div class="container">
 
     <div class="row" style="background-color: #4D4D4F; text-align: center">
 
         <div class="col-lg-12">
             <h2 style="color: #FFFFFF"></h2>
-            <h2 style="color: #FFFFFF">Tariffe</h2>
+            <h2 style="color: #FFFFFF">Contattaci</h2>
             <h2 style="color: #FFFFFF"></h2>
 
         </div>
@@ -44,31 +44,26 @@
                 <hr>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-8">
+                <br>
+                <h5 class="text-left" style="margin-top: -5%">Per qualsiasi informazione riguardo la struttura di parking o l'utilizzo dell'applicazione,
+                    rivolgiti all'indirizzo email:
+                    <br><br>
 
-        {% for _ in range(0, len) %}
-            <div class="row">
-                <div class="col-6">
-                    <b class="text-left" style="margin-top: -5%; font-size: x-large">{{ nomi_tariffe[loop.index0] }}</b>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <a class="text-left" style="font-size: large">{{ descr_tariffe[loop.index0] }}</a>
-                </div>
-            </div>
-            {% if prezzo_tariffe is defined %}
-            <div class="row">
-                <div class="col-12">
-                    <a class="text-left" style="font-size: large">Prezzo: {{ prezzo_tariffe[loop.index0] }} €</a>
-                </div>
-            </div>
-            {% endif %}
-        {% endfor %}
+                    <b>smartparking@gmail.com</b>
+                    <br><br>
 
-        <div class="row" style="margin-top: 7%; margin-bottom: 3%">
+                    Sarai contattato al più presto. </h5>
+                <hr>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+
+        <div class="row" style="margin-top: 3%; margin-bottom: 3%">
             <div class="col-2"></div>
             <div class="col-8 text-center">
-                <form method="GET" action="{{ url_for('auth.register') }}">
+                <form method="GET" action="{{ url_for('main.profilo') }}">
                     <button type="submit" class="btn btn-primary"
                             style="background-color: #4D4D4F; border-color: #4D4D4F;
                             "><b style="font-size: large">Back</b>
@@ -78,6 +73,6 @@
         </div>
 
     </div>
-</div>
+    </div>
 </body>
 </html>
