Fine parte relativa agli utenti.

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
 
     <!-- Bootstrap core -->
     <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
+    <script type="text/javascript" src="{{ url_for("static", filename="scripts/jquery-3.3.1.js") }}"></script>
+    <script type="text/javascript" src="{{ url_for("static", filename="scripts/bootstrap.js") }}"></script>
 
 </head>
 
