--- a/templates/user/profilo.html
+++ b/templates/user/profilo.html
@@ -251,11 +251,17 @@
             </div>
         </div>
 
+
         <div class="row" style="margin-top: 7%">
-            <div class="col-12" style="text-align: left">
+            <div class="col-6" style="text-align: left">
                 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal"
                         style="font-size: large; background-color: #ffffff; border: none"><u class="text-danger">Elimina
                     Account</u></button>
+            </div>
+            <div class="col-6" style="text-align: right">
+                <a class="btn btn-warning" href="{{ url_for('main.password') }}"
+                        style="font-size: large; background-color: #ffffff; border: none"><u class="text-info">Modifica
+                    Password</u></a>
             </div>
         </div>
 
