Fine parte relativa agli utenti.

--- a/templates/login/registration.html
+++ b/templates/login/registration.html
@@ -62,7 +62,7 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <a class="text-left"
-                                           style="font-size: large">Prezzo: {{ prezzo_tariffe[loop.index0] }} €</a>
+                                           style="font-size: large">Prezzo: {{ prezzo_tariffe[loop.index0] }} €/h</a>
                                     </div>
                                 </div>
                             {% endif %}
