--- a/templates/admin/modifica_password.html
+++ b/templates/admin/modifica_password.html
@@ -27,7 +27,7 @@
 
         <div class="col-lg-12">
             <h2 style="color: #FFFFFF"></h2>
-            <h2 style="color: #FFFFFF">Violazione</h2>
+            <h2 style="color: #FFFFFF">Modifica Password</h2>
             <h2 style="color: #FFFFFF"></h2>
 
         </div>
@@ -44,27 +44,49 @@
                 <hr>
             </div>
         </div>
-        <form method="POST" action="{{ url_for('main.violazione') }}">
+        <form method="POST" action="{{ url_for('admin.password') }}">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
             <div class="row">
                 <div class="col-12" style=" text-align: left">
-                    <a class="text-dark" style="font-size: large"><b><h2>Parcheggio {{ parcheggio }}</h2></b></a>
-
-                    <input type="hidden" name="parcheggio" value="{{ parcheggio }}"><br>
-
+                    <a class="text-dark" style="font-size: large"><h4>Gentile <b>{{ user }}</b></h4></a>
                 </div>
             </div>
 
-            <div class="row" style="margin-top: 2%">
+            <div class="row" style="margin-top: 0%">
                 <div class="col-12" style=" text-align: left">
-                    <a class="text-dark" style="font-size: x-large">Descrivici il problema:</a>
+                    <a class="text-dark" style="font-size: medium">Questa sezione ti permetterà di modificare la tua password.
+                        Alla modifica seguirà, per questioni di sicurezza, un logout;
+                        successivamente potrai accedere con le tue nuove credenziali. </a>
                 </div>
             </div>
 
-            <div class="row" style="margin-top: 7%">
-                <div class="col-12" style=" text-align: left">
-                    {{ form.violazione(class="form-control", placeholder='Es. Manca la segnalazione del parcheggio.', pattern=".{2,}", rows='5') }}
+            <div class="row" style="margin-top: 5%">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label class="sr-only" for="password">Password</label>
+                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
+                            {{ form.password(class="form-control", placeholder="Password", pattern=".{5,}", title="Minimo 5 caratteri", required=True) }}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label class="sr-only" for="password">Confirm Password</label>
+                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
+                            {{ form.confirm_password(class="form-control", placeholder="Confirm Password", pattern=".{5,}", title="Minimo 5 caratteri", required=True) }}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
                 </div>
             </div>
 
@@ -74,7 +96,7 @@
 
                     <button type="submit" class="btn btn-primary"
                             style="background-color: #4D4D4F; border-color: #4D4D4F;
-                            "><b style="font-size: large">Invia</b>
+                            "><b style="font-size: large">Modifica</b>
                     </button>
                 </div>
             </div>
@@ -84,9 +106,7 @@
         <div class="row" style="margin-top: 3%; margin-bottom: 3%">
             <div class="col-2"></div>
             <div class="col-8 text-center">
-                <form method="POST" action="{{ url_for('main.parking') }}">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    <input type="hidden" name="parking" value="{{ parcheggio }}"/>
+                <form method="GET" action="{{ url_for('admin.profilo') }}">
                     <button type="submit" class="btn btn-primary"
                             style="background-color: #4D4D4F; border-color: #4D4D4F;
                             "><b style="font-size: large">Back</b>
