--- a/templates/admin/tariffe_admin.html
+++ b/templates/admin/tariffe_admin.html
@@ -68,7 +68,7 @@
                                         <tr>
                                             <th scope="row">
                                                 <div class="form-group">
-                                                    {{ form.descrizione(class="form-control", placeholder='Descrizione', pattern=".{2,}", cols='5') }}
+                                                    {{ form.descrizione(class="form-control", placeholder='Descrizione', pattern=".{2,}", rows='4') }}
                                                 </div>
                                             </th>
                                         </tr>
