--- a/templates/login/not_allowed.html
+++ b/templates/login/not_allowed.html
@@ -71,7 +71,7 @@
                 <form method="GET" action="{{ url_for('auth.login') }}">
                     <button type="submit" class="btn btn-primary"
                             style="background-color: #4D4D4F; border-color: #4D4D4F;
-                            "><b style="font-size: large">Back</b>
+                            "><b style="font-size: large">Login</b>
                     </button>
                 </form>
             </div>
