--- a/templates/user/parking.html
+++ b/templates/user/parking.html
@@ -65,7 +65,7 @@
                                 <input class="form-check-input" type="radio" name="violazione" id="exampleRadios2"
                                        value="option2">
                                 <label class="form-check-label" for="exampleRadios2">
-                                    Parcheggio non funzionante
+                                    Il parcheggio non identifica la mia auto
                                 </label>
                             </div>
                             <div class="form-check">
