--- a/templates/admin/parking.html
+++ b/templates/admin/parking.html
@@ -142,7 +142,7 @@
                     <div class="row" style="padding-top: 1rem; margin-top: 3%">
                         <div class="col-2"></div>
                         <div class="col-8 text-center">
-                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                            <button type="button" class="btn btn-danger" data-toggle="modal"
                                     data-target="#confermaModal"
                                     style="background-color: #4D4D4F; border-color: #4D4D4F;
                                 "><b style="font-size: large">Occupa</b>
@@ -156,7 +156,7 @@
                     <div class="row" style="padding-top: 1rem; margin-top: 3%">
                         <div class="col-2"></div>
                         <div class="col-8 text-center">
-                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                            <button type="button" class="btn btn-success" data-toggle="modal"
                                     data-target="#confermaModal"
                                     style="background-color: #4D4D4F; border-color: #4D4D4F;
                                 "><b style="font-size: large">Libera</b>
@@ -169,6 +169,24 @@
             </div>
 
         </form>
+
+        <div id="fuori_servizio">
+            {% if stato != 'Fuori Servizio' %}
+                <div class="row" style="margin-top: 3%">
+                    <div class="col-2"></div>
+                    <div class="col-8 text-center">
+                        <form method="POST" action="{{ url_for("admin.fuori_servizio") }}">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                            <button type="submit" class="btn btn-dark" name="fuori_servzio" value="{{ parking }}"
+                                    style="background-color: #4D4D4F; border-color: #4D4D4F;
+                                "><b style="font-size: large">Fuori Servizio</b>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            {% endif %}
+        </div>
+
 
         <div id="content2">
             <div class="row" style="margin-top: 7%; margin-bottom: 3%">
@@ -195,7 +213,7 @@
             </div>
         </div>
 
-        <div id='buttonGestisci' class="row" style="margin-top: 7%; margin-bottom: 3%">
+        <div id='buttonGestisci' class="row" style="margin-top: 3%; margin-bottom: 3%">
             <div class="col-2"></div>
             <div class="col-8 text-center">
                 <form method="GET" action="{{ url_for('admin.gestisci') }}">
