--- a/templates/user/prenotazione_in_corso.html
+++ b/templates/user/prenotazione_in_corso.html
@@ -48,8 +48,8 @@
             <div class="col-md-8">
                 <br>
                 <h5 class="text-left" style="margin-top: -5%">
-                    Mi dispiace <a class="text-primary">{{ username }}</a> <br> ma non hai prenotazioni associate al tuo account.
-                    Per prenotare, premi il pulsante "PRENOTA" sul menù principale.
+                    Ciao <a class="text-primary">{{ username }}</a>, in questo momento hai prenotazione associata al tuo account.
+                    Ricorda che hai 15 minuti per occupare il parcheggio, diversamente la prenotazione verrà annullata.
                 </h5>
                 <hr>
             </div>
