--- a/templates/admin/gestisci.html
+++ b/templates/admin/gestisci.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <!-- <meta http-equiv="refresh" content="5" > -->
+    <meta http-equiv="refresh" content="5" >
 
     <title>Smart Parking</title>
 
